--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -10,28 +10,23 @@
             name="viewModel"
             type="com.martianlab.recipes.presentation.views.recipeItem.RecipeItemViewModel"/>
 
-        <variable
-                name="clickListener"
-                type="android.view.View.OnClickListener"/>
-
-        <variable
-                name="recipe"
-                type="com.martianlab.recipes.entities.Recipe"/>
     </data>
 
     <androidx.cardview.widget.CardView
             android:layout_width="150dp"
             android:layout_height="220dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="0dp"
             android:layout_marginBottom="4dp"
-            android:onClick="@{clickListener}">
+            android:onClick="@{()->viewModel.onClick()}">
 
-        <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_menu_gallery" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageView2"
+            imageUrl="@{viewModel.imageURL}"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:gravity="top"
+            app:srcCompat="@drawable/ic_menu_gallery" />
 
 
         <TextView
@@ -43,7 +38,7 @@
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="3"
-            android:text="@{recipe.title}"
+            android:text="@{viewModel.title}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             tools:text="Березовая каша с вкусными ореховыми прутиками" />
 
