--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/apk"
         xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -42,6 +41,7 @@
                         android:orientation="vertical">
 
                     <com.google.android.material.appbar.MaterialToolbar
+                            onNavigationClick="@{()->viewModel.onBackPressed()}"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/toolbar"
@@ -123,7 +123,7 @@
                     android:contentDescription="@null"
                     android:orientation="horizontal">
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/buttonIngrediends"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
