--- a/app/src/main/res/layout/recipe_category_item.xml
+++ b/app/src/main/res/layout/recipe_category_item.xml
@@ -40,6 +40,7 @@
                 android:layout_marginBottom="8dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 data="@{viewModel.recipeList}"
+                app:orientation="0"
                 tools:listitem="@layout/recipe_item"/>
 
 
