--- a/app/src/main/res/layout/recipe_stage_item.xml
+++ b/app/src/main/res/layout/recipe_stage_item.xml
@@ -20,13 +20,13 @@
 
         <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/recipeImage"
+                imageUrl="@{viewModel.imageURL}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
+                android:gravity="top"
                 android:adjustViewBounds="true"
                 android:contentDescription="Фото рецепта"
-                android:scaleType="fitStart"
-                imageUrl="@{viewModel.imageURL}" />
+                android:scaleType="center" />
 
         <FrameLayout
                 android:id="@+id/root"
