--- a/presentation/src/main/res/layout/fragment_recipe_details.xml
+++ b/presentation/src/main/res/layout/fragment_recipe_details.xml
@@ -7,7 +7,7 @@
 
     <data>
 
-        <import type="com.martianlab.recipes.presentation.RecipeComplexity"/>
+        <import type="com.martianlab.recipes.entities.RecipeComplexity"/>
         <variable
                 name="recipe"
                 type="com.martianlab.recipes.entities.Recipe" />
